[package]
name = "vaxbot"
version = "0.1.4"
authors = ["Daniel P <daniel@pont.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.8"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
human_format = "1"
tracery = {git = "https://github.com/daniel-tp/tracery-rs"}
static_init = "0.5"
gjson = "0.7.0"
dotenv = "0.15.0"